force-app/main/default/objects/Ata_e_Impedimento__c/fields/Ata_Daily__c.field-meta.xml
<CustomField>
    <fullName>Ata_Daily__c</fullName>
    <label>Ata Daily</label>
    <referenceTo>Ata_Daily__c</referenceTo>
    <relationshipLabel>Impedimentos relacionados</relationshipLabel>
    <relationshipName>Impedimentos_relacionados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>