force-app/main/default/objects/Ata_e_Impedimento__c/fields/Deadline_Impedimento__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Impedimento__c</fullName>
    <formula>Impedimento__r.Dead_line_para_solucao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline Impedimento</label>
    <type>Date</type>
</CustomField>