force-app/main/default/objects/Ata_e_Impedimento__c/fields/Desc_Impedimento__c.field-meta.xml
<CustomField>
    <fullName>Desc_Impedimento__c</fullName>
    <formula>Impedimento__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição Impedimento</label>
    <type>Text</type>
</CustomField>