force-app/main/default/objects/Ata_e_Impedimento__c/fields/Impedimento__c.field-meta.xml
<CustomField>
    <fullName>Impedimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impedimento</label>
    <referenceTo>Impediment__c</referenceTo>
    <relationshipLabel>Atas e Impedimentos</relationshipLabel>
    <relationshipName>Atas_e_Impedimentos</relationshipName>
    <type>Lookup</type>
</CustomField>