force-app/main/default/objects/Ata_e_Impedimento__c/fields/Status_Impedimento__c.field-meta.xml
<CustomField>
    <fullName>Status_Impedimento__c</fullName>
    <formula>TEXT(Impedimento__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Impedimento</label>
    <type>Text</type>
</CustomField>